Added a file naming convention and applied its logic to JavaFX

--- a/src/main/resources/scenes/default.scene.fxml
+++ b/src/main/resources/scenes/default.scene.fxml
@@ -2,5 +2,8 @@
 
 <?import javafx.scene.layout.Pane?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" />
+<?import javafx.scene.control.Label?>
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="controllers.DefaultSceneController">
+    <fx:include source="../controllers/menu.controller.fxml" />
+    <Pane fx:id="contentProvider" layoutY="24.0" prefHeight="576.0" prefWidth="1000.0"/>
+</Pane>
