--- a/src/main/resources/scenes/create.record.scene.fxml
+++ b/src/main/resources/scenes/create.record.scene.fxml
@@ -1,15 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="576.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="576.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CreateRecordController">
    <children>
       <Label layoutX="55.0" layoutY="31.0" prefHeight="46.0" prefWidth="698.0" text="Create Record">
          <font>
             <Font name="System Bold" size="36.0" />
          </font>
       </Label>
+      <Label layoutX="60.0" layoutY="98.0" prefHeight="17.0" prefWidth="162.0" text="First Name">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+      <TextField fx:id="firstNameField" layoutX="61.0" layoutY="120.0" />
+      <Label layoutX="222.0" layoutY="97.0" prefHeight="17.0" prefWidth="162.0" text="Last Name">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+      <TextField fx:id="lastNameField" layoutX="223.0" layoutY="119.0" />
+      <Label layoutX="60.0" layoutY="161.0" prefHeight="17.0" prefWidth="162.0" text="Gender">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+      <ComboBox fx:id="genderComboBox" layoutX="60.0" layoutY="186.0" prefWidth="150.0" promptText="None Selected" />
+      <Label layoutX="223.0" layoutY="161.0" prefHeight="17.0" prefWidth="162.0" text="Date of Birth">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+      <DatePicker fx:id="dateOfBirthField" layoutX="223.0" layoutY="187.0" />
+      <Label layoutX="60.0" layoutY="227.0" prefHeight="17.0" prefWidth="162.0" text="Salary">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+      <TextField fx:id="salaryField" layoutX="61.0" layoutY="250.0" />
+      <Label layoutX="222.0" layoutY="226.0" prefHeight="17.0" prefWidth="162.0" text="Profession">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+      <TextField fx:id="professionField" layoutX="223.0" layoutY="249.0" />
+      <Button layoutX="796.0" layoutY="528.0" mnemonicParsing="false" onAction="#cancelCreateRecord" prefWidth="70.0" text="Cancel" />
+      <Button layoutX="883.0" layoutY="528.0" mnemonicParsing="false" onAction="#createRecord" prefWidth="70.0" text="Save" />
    </children>
 </Pane>
