--- a/src/main/resources/scenes/create.record.scene.fxml
+++ b/src/main/resources/scenes/create.record.scene.fxml
@@ -6,9 +6,10 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="576.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CreateRecordController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="576.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CreateEmployeeRecordController">
    <children>
       <Label layoutX="55.0" layoutY="31.0" prefHeight="46.0" prefWidth="698.0" text="Create Record">
          <font>
@@ -20,38 +21,88 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <TextField fx:id="firstNameField" layoutX="61.0" layoutY="120.0" />
+      <TextField fx:id="firstNameField" layoutX="61.0" layoutY="120.0" onAction="#previewRecord" onKeyReleased="#previewRecord" onMouseClicked="#previewRecord" />
       <Label layoutX="222.0" layoutY="97.0" prefHeight="17.0" prefWidth="162.0" text="Last Name">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <TextField fx:id="lastNameField" layoutX="223.0" layoutY="119.0" />
+      <TextField fx:id="lastNameField" layoutX="223.0" layoutY="119.0" onAction="#previewRecord" onKeyReleased="#previewRecord" onMouseClicked="#previewRecord" />
       <Label layoutX="60.0" layoutY="161.0" prefHeight="17.0" prefWidth="162.0" text="Gender">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <ComboBox fx:id="genderComboBox" layoutX="60.0" layoutY="186.0" prefWidth="150.0" promptText="None Selected" />
+      <ComboBox fx:id="genderComboBox" layoutX="60.0" layoutY="186.0" onAction="#previewRecord" onKeyReleased="#previewRecord" onMouseClicked="#previewRecord" onMouseReleased="#previewRecord" prefWidth="150.0" promptText="None Selected" />
       <Label layoutX="223.0" layoutY="161.0" prefHeight="17.0" prefWidth="162.0" text="Date of Birth">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <DatePicker fx:id="dateOfBirthField" layoutX="223.0" layoutY="187.0" />
+      <DatePicker fx:id="dateOfBirthField" layoutX="223.0" layoutY="187.0" onAction="#previewRecord" onKeyReleased="#previewRecord" onMouseClicked="#previewRecord" />
       <Label layoutX="60.0" layoutY="227.0" prefHeight="17.0" prefWidth="162.0" text="Salary">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <TextField fx:id="salaryField" layoutX="61.0" layoutY="250.0" />
+      <TextField fx:id="salaryField" layoutX="61.0" layoutY="250.0" onAction="#previewRecord" onKeyReleased="#previewRecord" onMouseClicked="#previewRecord" />
       <Label layoutX="222.0" layoutY="226.0" prefHeight="17.0" prefWidth="162.0" text="Profession">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <TextField fx:id="professionField" layoutX="223.0" layoutY="249.0" />
+      <TextField fx:id="professionField" layoutX="223.0" layoutY="249.0" onAction="#previewRecord" onKeyReleased="#previewRecord" onMouseClicked="#previewRecord" />
       <Button layoutX="796.0" layoutY="528.0" mnemonicParsing="false" onAction="#cancelCreateRecord" prefWidth="70.0" text="Cancel" />
       <Button layoutX="883.0" layoutY="528.0" mnemonicParsing="false" onAction="#createRecord" prefWidth="70.0" text="Save" />
+      <Label fx:id="previewLabel" layoutX="559.0" layoutY="96.0" prefHeight="17.0" prefWidth="162.0" text="Preview:" visible="false">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+      <Label fx:id="errorLabel" layoutX="63.0" layoutY="302.0" prefHeight="25.0" prefWidth="341.0" textFill="RED" />
+      <VBox fx:id="previewVBoxLeft" layoutX="557.0" layoutY="129.0" prefHeight="120.0" prefWidth="73.0" visible="false">
+         <children>
+            <Label prefHeight="17.0" prefWidth="61.0" text="firstName :" />
+            <Label prefHeight="17.0" prefWidth="61.0" text="lastName : " />
+            <Label prefHeight="17.0" prefWidth="49.0" text="gender :" />
+            <Label prefHeight="17.0" prefWidth="71.0" text="dateOfBirth :" />
+            <Label prefHeight="17.0" prefWidth="41.0" text="salary :" />
+            <Label prefHeight="17.0" prefWidth="63.0" text="profession :" />
+         </children>
+      </VBox>
+      <VBox fx:id="previewVBoxRight" layoutX="643.0" layoutY="129.0" prefHeight="120.0" prefWidth="276.0" visible="false">
+         <children>
+            <Label fx:id="firstNamePreviewLabel" prefHeight="17.0" prefWidth="210.0" text="&quot;&quot;" textFill="#00ab17">
+               <font>
+                  <Font name="System Italic" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="lastNamePreviewLabel" prefHeight="17.0" prefWidth="210.0" text="&quot;&quot;" textFill="#00ab17">
+               <font>
+                  <Font name="System Italic" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="genderPreviewLabel" prefHeight="17.0" prefWidth="210.0" text="&quot;&quot;" textFill="#00ab17">
+               <font>
+                  <Font name="System Italic" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="dateOfBirthPreviewLabel" prefHeight="17.0" prefWidth="210.0" textFill="#00a0b5">
+               <font>
+                  <Font name="System Italic" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="salaryPreviewLabel" prefHeight="17.0" prefWidth="210.0" textFill="#84a2b5">
+               <font>
+                  <Font name="System Italic" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="professionPreviewLabel" prefHeight="17.0" prefWidth="210.0" text="&quot;&quot;" textFill="#00ab17">
+               <font>
+                  <Font name="System Italic" size="12.0" />
+               </font>
+            </Label>
+         </children>
+      </VBox>
    </children>
 </Pane>
