--- a/src/main/resources/scenes/create.record.scene.fxml
+++ b/src/main/resources/scenes/create.record.scene.fxml
@@ -2,64 +2,24 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="576.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CreateEmployeeRecordController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="576.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CreateRecordController">
    <children>
-      <Label layoutX="55.0" layoutY="31.0" prefHeight="46.0" prefWidth="698.0" text="Create Record">
+      <Label layoutX="55.0" layoutY="31.0" prefHeight="53.0" prefWidth="258.0" text="Create Record">
          <font>
             <Font name="System Bold" size="36.0" />
          </font>
       </Label>
-      <Label layoutX="60.0" layoutY="98.0" prefHeight="17.0" prefWidth="162.0" text="First Name">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </Label>
-      <TextField fx:id="firstNameField" layoutX="61.0" layoutY="120.0" onAction="#previewRecord" onKeyReleased="#previewRecord" onMouseClicked="#previewRecord" />
-      <Label layoutX="222.0" layoutY="97.0" prefHeight="17.0" prefWidth="162.0" text="Last Name">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </Label>
-      <TextField fx:id="lastNameField" layoutX="223.0" layoutY="119.0" onAction="#previewRecord" onKeyReleased="#previewRecord" onMouseClicked="#previewRecord" />
-      <Label layoutX="60.0" layoutY="161.0" prefHeight="17.0" prefWidth="162.0" text="Gender">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </Label>
-      <ComboBox fx:id="genderComboBox" layoutX="60.0" layoutY="186.0" onAction="#previewRecord" onKeyReleased="#previewRecord" onMouseClicked="#previewRecord" onMouseReleased="#previewRecord" prefWidth="150.0" promptText="None Selected" />
-      <Label layoutX="223.0" layoutY="161.0" prefHeight="17.0" prefWidth="162.0" text="Date of Birth">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </Label>
-      <DatePicker fx:id="dateOfBirthField" layoutX="223.0" layoutY="187.0" onAction="#previewRecord" onKeyReleased="#previewRecord" onMouseClicked="#previewRecord" />
-      <Label layoutX="60.0" layoutY="227.0" prefHeight="17.0" prefWidth="162.0" text="Salary">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </Label>
-      <TextField fx:id="salaryField" layoutX="61.0" layoutY="250.0" onAction="#previewRecord" onKeyReleased="#previewRecord" onMouseClicked="#previewRecord" />
-      <Label layoutX="222.0" layoutY="226.0" prefHeight="17.0" prefWidth="162.0" text="Profession">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </Label>
-      <TextField fx:id="professionField" layoutX="223.0" layoutY="249.0" onAction="#previewRecord" onKeyReleased="#previewRecord" onMouseClicked="#previewRecord" />
-      <Button layoutX="796.0" layoutY="528.0" mnemonicParsing="false" onAction="#cancelCreateRecord" prefWidth="70.0" text="Cancel" />
-      <Button layoutX="883.0" layoutY="528.0" mnemonicParsing="false" onAction="#createRecord" prefWidth="70.0" text="Save" />
       <Label fx:id="previewLabel" layoutX="559.0" layoutY="96.0" prefHeight="17.0" prefWidth="162.0" text="Preview:" visible="false">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <Label fx:id="errorLabel" layoutX="63.0" layoutY="302.0" prefHeight="25.0" prefWidth="341.0" textFill="RED" />
       <VBox fx:id="previewVBoxLeft" layoutX="557.0" layoutY="129.0" prefHeight="120.0" prefWidth="73.0" visible="false">
          <children>
             <Label prefHeight="17.0" prefWidth="61.0" text="firstName :" />
@@ -104,5 +64,9 @@
             </Label>
          </children>
       </VBox>
+      <ComboBox fx:id="recordComboBox" layoutX="55.0" layoutY="101.0" prefHeight="25.0" prefWidth="179.0" promptText="Select Record" />
+      <Button layoutX="253.0" layoutY="101.0" mnemonicParsing="false" onAction="#loadCreator" prefHeight="25.0" prefWidth="121.0" text="Load Creator" />
+      <Pane fx:id="recordContentPane" layoutY="146.0" prefHeight="430.0" prefWidth="1000.0" />
+      <Separator layoutX="14.0" layoutY="143.0" prefHeight="3.0" prefWidth="973.0" />
    </children>
 </Pane>
