--- a/src/main/resources/scenes/update.record.scene.fxml
+++ b/src/main/resources/scenes/update.record.scene.fxml
@@ -1,15 +1,72 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="576.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="576.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.UpdateRecordController">
    <children>
-      <Label layoutX="55.0" layoutY="31.0" prefHeight="46.0" prefWidth="698.0" text="Update Record">
+      <Label layoutX="55.0" layoutY="31.0" prefHeight="53.0" prefWidth="258.0" text="Update Record">
          <font>
             <Font name="System Bold" size="36.0" />
          </font>
       </Label>
+      <Label fx:id="previewLabel" layoutX="559.0" layoutY="96.0" prefHeight="17.0" prefWidth="162.0" text="Preview:" visible="false">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Label>
+      <VBox fx:id="previewVBoxLeft" layoutX="557.0" layoutY="129.0" prefHeight="120.0" prefWidth="73.0" visible="false">
+         <children>
+            <Label prefHeight="17.0" prefWidth="61.0" text="firstName :" />
+            <Label prefHeight="17.0" prefWidth="61.0" text="lastName : " />
+            <Label prefHeight="17.0" prefWidth="49.0" text="gender :" />
+            <Label prefHeight="17.0" prefWidth="71.0" text="dateOfBirth :" />
+            <Label prefHeight="17.0" prefWidth="41.0" text="salary :" />
+            <Label prefHeight="17.0" prefWidth="63.0" text="profession :" />
+         </children>
+      </VBox>
+      <VBox fx:id="previewVBoxRight" layoutX="643.0" layoutY="129.0" prefHeight="120.0" prefWidth="276.0" visible="false">
+         <children>
+            <Label fx:id="firstNamePreviewLabel" prefHeight="17.0" prefWidth="210.0" text="&quot;&quot;" textFill="#00ab17">
+               <font>
+                  <Font name="System Italic" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="lastNamePreviewLabel" prefHeight="17.0" prefWidth="210.0" text="&quot;&quot;" textFill="#00ab17">
+               <font>
+                  <Font name="System Italic" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="genderPreviewLabel" prefHeight="17.0" prefWidth="210.0" text="&quot;&quot;" textFill="#00ab17">
+               <font>
+                  <Font name="System Italic" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="dateOfBirthPreviewLabel" prefHeight="17.0" prefWidth="210.0" textFill="#00a0b5">
+               <font>
+                  <Font name="System Italic" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="salaryPreviewLabel" prefHeight="17.0" prefWidth="210.0" textFill="#84a2b5">
+               <font>
+                  <Font name="System Italic" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="professionPreviewLabel" prefHeight="17.0" prefWidth="210.0" text="&quot;&quot;" textFill="#00ab17">
+               <font>
+                  <Font name="System Italic" size="12.0" />
+               </font>
+            </Label>
+         </children>
+      </VBox>
+      <ComboBox fx:id="recordComboBox" layoutX="55.0" layoutY="101.0" prefHeight="25.0" prefWidth="179.0" promptText="Select Record" />
+      <Button layoutX="253.0" layoutY="101.0" mnemonicParsing="false" onAction="#loadCreator" prefHeight="25.0" prefWidth="121.0" text="Load Creator" />
+      <Pane fx:id="recordContentPane" layoutY="146.0" prefHeight="430.0" prefWidth="1000.0" />
+      <Separator layoutX="14.0" layoutY="143.0" prefHeight="3.0" prefWidth="973.0" />
    </children>
 </Pane>
