--- a/src/main/resources/scenes/delete.record.scene.fxml
+++ b/src/main/resources/scenes/delete.record.scene.fxml
@@ -7,30 +7,27 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="576.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.DeleteRecordController">
-   <children>
-      <Label layoutX="55.0" layoutY="31.0" prefHeight="46.0" prefWidth="698.0" text="Delete Record">
-         <font>
-            <Font name="System Bold" size="36.0" />
-         </font>
-      </Label>
-      <Label layoutX="55.0" layoutY="170.0" prefHeight="17.0" prefWidth="162.0" text="Object ID">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </Label>
-      <TextField fx:id="objectIdTextField" layoutX="55.0" layoutY="193.0" prefHeight="25.0" prefWidth="309.0" />
-      <Button layoutX="806.0" layoutY="538.0" mnemonicParsing="false" onAction="#cancelRecordDelete" prefWidth="70.0" text="Cancel" />
-      <Button layoutX="893.0" layoutY="538.0" mnemonicParsing="false" onAction="#deleteRecord" prefWidth="70.0" text="Delete" />
-      <ComboBox fx:id="collectionComboBox" layoutX="55.0" layoutY="122.0" prefHeight="25.0" prefWidth="309.0" promptText="Select Collection" />
-      <Label layoutX="55.0" layoutY="96.0" prefHeight="17.0" prefWidth="162.0" text="Choose collection">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </Label>
-      <Button layoutX="226.0" layoutY="242.0" mnemonicParsing="false" onAction="#previewObject" prefHeight="25.0" prefWidth="138.0" text="Preview Object" />
-      <Label fx:id="previewLabel" alignment="TOP_LEFT" layoutX="469.0" layoutY="206.0" prefHeight="141.0" prefWidth="424.0" textFill="#00ab17" wrapText="true" />
-      <Label fx:id="errorLabel" layoutX="55.0" layoutY="288.0" prefHeight="17.0" prefWidth="309.0" textFill="RED" />
-      <Button layoutX="380.0" layoutY="122.0" mnemonicParsing="false" onAction="#fillCollectionComboBox" prefHeight="25.0" prefWidth="138.0" text="Fetch Collections" />
-   </children>
+<Pane fx:id="deleteRecordPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="576.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.delete.DeleteRecordController">
+   <Label layoutX="55.0" layoutY="31.0" prefHeight="46.0" prefWidth="698.0" text="Delete Record">
+      <font>
+         <Font name="System Bold" size="36.0" />
+      </font>
+   </Label>
+   <Label layoutX="55.0" layoutY="170.0" prefHeight="17.0" prefWidth="162.0" text="Object ID">
+      <font>
+         <Font name="System Bold" size="12.0" />
+      </font>
+   </Label>
+   <TextField fx:id="objectIdTextField" layoutX="55.0" layoutY="193.0" prefHeight="25.0" prefWidth="309.0" />
+   <Button layoutX="806.0" layoutY="538.0" mnemonicParsing="false" onAction="#cancelRecordDelete" prefWidth="70.0" text="Cancel" />
+   <Button layoutX="893.0" layoutY="538.0" mnemonicParsing="false" onAction="#deleteRecord" prefWidth="70.0" text="Delete" />
+   <ComboBox fx:id="collectionComboBox" layoutX="55.0" layoutY="122.0" prefHeight="25.0" prefWidth="309.0" promptText="Select Collection" />
+   <Label layoutX="55.0" layoutY="96.0" prefHeight="17.0" prefWidth="162.0" text="Choose collection">
+      <font>
+         <Font name="System Bold" size="12.0" />
+      </font>
+   </Label>
+   <Button layoutX="226.0" layoutY="242.0" mnemonicParsing="false" onAction="#previewObject" prefHeight="25.0" prefWidth="138.0" text="Preview Object" />
+   <Label fx:id="previewLabel" alignment="TOP_LEFT" layoutX="469.0" layoutY="206.0" prefHeight="141.0" prefWidth="424.0" textFill="#00ab17" wrapText="true" />
+   <Label fx:id="errorLabel" layoutX="55.0" layoutY="288.0" prefHeight="17.0" prefWidth="309.0" textFill="RED" />
 </Pane>
